# backTesting

./: pyproject.toml
scripts/: algousdt_analysis.py  binance_download.py
scripts/notebooks/: algousdt_analysis.ipynb  btc_usd_eda.ipynb
scripts/notebooks/.ipynb_checkpoints/: algousdt_analysis-checkpoint.ipynb
