[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Santi", email = "santiagog95@gmail.com"},
]
dependencies = [
    "jupyter>=1.0.0",
    "python-binance>=1.0.15",
    "ipython>=8.0.1",
    "gym-anytrading>=1.2.0",
    "freqtrade>=2022.1",
    "requests>=2.27.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
